# promptscript

./: .cursorrules  .dockerignore  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yaml  eslint.base.config.cjs  eslint.config.cjs  knip.json  latest  llms.txt  mkdocs.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  promptscript.yaml  release-please-config.json  requirements-docs.txt  tsconfig.base.json  typedoc.json  versions.json
.claude/: settings.json
.factory/: mcp.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.husky/: pre-commit
.promptscript/: commands.prs  context.prs  graph.prs  local.prs  project.prs  restrictions.prs  standards.prs
dev/: 404.html  index.html  llms-full.txt  sitemap.xml
docs/: 404.html  changelog.md  getting-started.md  index.md  tutorial.md
docs_extensions/: __init__.py  mkdocs_hooks.py  promptscript_lexer.py  pyproject.toml
notebook-lm-sources/: 01-problem-en.md  01-problem-pl.md  02-solution-en.md  02-solution-pl.md  03-features-en.md  03-features-pl.md  04-comparison-en.md  04-comparison-pl.md  05-enterprise-en.md  05-enterprise-pl.md  06-quickstart-en.md  06-quickstart-pl.md  07-language-en.md  07-language-pl.md  08-skills-manager-en.md  08-skills-manager-pl.md  title-card.html  twitter-threads.md
playground/: index.html  (+1 more)
playground-dev/: index.html  package.json
(+15693 files in other folders)
