[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptscript-pygments"
version = "1.0.0"
description = "Pygments lexer for PromptScript syntax highlighting"
requires-python = ">=3.9"
dependencies = ["pygments>=2.0"]

[tool.setuptools]
py-modules = ["promptscript_lexer", "mkdocs_hooks"]

[project.entry-points."pygments.lexers"]
promptscript = "promptscript_lexer:PromptScriptLexer"
